# gunnir

./: Cargo.toml  build.rs
gunnir-board/: Cargo.toml  build.rs
gunnir-board/src/: board.rs  lib.rs  movegen.rs  perft.rs  slider_moves.rs  zobrist.rs
gunnir-common/: Cargo.toml
gunnir-common/src/: bitboard.rs  direction.rs  lib.rs  move.rs  piece.rs  square.rs  square_lookups.rs  util.rs
src/: board.rs  lib.rs  main.rs  perft.rs
